implementation of ModelTests